--- a/app/views/devise/shared/_flash.html.erb
+++ b/app/views/devise/shared/_flash.html.erb
@@ -1,11 +1,10 @@
 <div id="flash">
   <% flash.each do |key, value| %>
-    <div class="<%= flash_class(key.to_sym) %> alert alert-success fade show"
-    role="alert">
+    <div class="<%= flash_class(key.to_sym) %> text-center" role="alert">
       <% unless value == true %>
         <button type="button" class="btn-close" data-bs-dismiss="alert"
-        aria-label="Close"></button>
-        <%= value %>
+          aria-label="Close"></button>
+          <%= value %>
       <% end %>
     </div>
   <% end %>
