--- a/app/assets/stylesheets/box.css
+++ b/app/assets/stylesheets/box.css
@@ -5,12 +5,21 @@
   background-color: antiquewhite;
 }
 
+.box-1-1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 5px;
+  row-gap: 5px;
+  padding: 10px;
+  background-color: antiquewhite;
+}
+
 .box-2 {
   display: grid;
   grid-column: 1fr;
   border: 1px solid grey;
-  padding: 50px;
-  row-gap: 20px ;
+  padding: 10px;
+  row-gap: 10px ;
   background-color: antiquewhite;
 }
 
@@ -18,5 +27,10 @@
   grid-column: 1fr;
   border: 1px solid grey;
   padding: 50px;
+  background-color: antiquewhite;
+}
+
+.add-song {
+  grid-template-columns: 1fr;
   background-color: antiquewhite;
 }
