--- a/app/assets/stylesheets/content.css
+++ b/app/assets/stylesheets/content.css
@@ -5,9 +5,7 @@
 
 html,
 body {
-  width: 100%;
   height: 100%;
-  line-height: 1;
   background-color: rgb(255, 255, 255);
 }
 
@@ -28,4 +26,8 @@ a {
 .content-column {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
+}
+
+.no-display {
+  display: none;
 }
