--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
 
     <div class="wrapper">
+
       <header class="p-1 bg-dark text-white mb-2">
         <div class="container">
           <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -40,21 +41,15 @@
       </header>
 
       <%= render "devise/shared/flash" %>
-      <div class="main">
+
+      <main class="main">
         <%= yield %>
-      </div>
-      <%# 
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        </ul>
-        <p class="text-center text-muted">© 2021 Company, Inc</p>
+      </main>
+
+      <footer class="footer text-center">
+        Footer      
       </footer>
-      %>
+
     </div>
   </body>
 </html>
