--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+
+<div class="title-registration me-3 ms-3">
+  Личный кабинет
+</div>
+
 <div class="container-profile">
 
     <div class="column-left-profile">
@@ -42,21 +47,19 @@
     </div>
 
     <div class="column-right-profile">
-      <div class="add-song">
-        <%= button_to "Add song", new_song_path, class: "btn btn-dark" %>
-      </div>
 
-      <div class="add-song">
-        <%= button_to "Add song", new_song_path, class: "btn btn-dark" %>
-      </div>
+      <div><%= link_to "Добавить песню", new_song_path, class: "btn btn-dark bi bi-music-note" %></div>
 
-      <div class="add-song">
-        <%= button_to "Add song", new_song_path, class: "btn btn-dark" %>
-      </div>
+      <div><%= link_to "Создать список", songs_path, class: "btn btn-dark bi bi-music-note" %></div>
 
-      <div class="add-song">
-        <%= button_to "Add song", new_song_path, class: "btn btn-dark" %>
-      </div>
+      <div><%= link_to "По авторам", new_song_path, class: "btn btn-dark bi bi-music-note" %></div>
+
+      <div><%= link_to "Мои списки", new_song_path, class: "btn btn-dark bi bi-music-note-list" %></div>
+
+      <div><%= link_to "Выучил", new_song_path, class: "btn btn-dark bi bi-music-note-list" %></div>
+      
+      <div><%= link_to "Учу", new_song_path, class: "btn btn-dark bi bi-music-note-list" %></div>
+
     </div>
 
 </div>
