--- a/app/assets/stylesheets/registration.css
+++ b/app/assets/stylesheets/registration.css
@@ -2,12 +2,11 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
-  align-items: center;
-  justify-items: center;
+  align-items: none;
+  justify-items: none;
   background-color: #e8e8e8;
   color: rgb(0, 0, 0);
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
 }
 
 
