--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="content-column">
   <div class="column-left">
     <% @songs.each do |song| %>
-      <%= song %>
+      <p><%= link_to "#{song.title}", song_path(song.id) %></p>
     <% end %>
   </div>
 
