--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,7 +1,14 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
-@import "@fortawesome/fontawesome-free/css/all";
+@font-face {
+  font-family: "FontAwesome";
+  src: url('<%= asset_path("fontawesome-webfont.eot") %>');
+  src: url('<%= asset_path("fontawesome-webfont.eot") + "?#iefix" %>') format('eot'), url('<%= asset_path("fontawesome-webfont.woff") %>') format('woff'), url('<%= asset_path("fontawesome-webfont.ttf") %>') format('truetype'), url('<%= asset_path("fontawesome-webfont.svg") + "#FontAwesome" %>') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @import "content";
 @import "column";
 @import "registration";
@@ -12,6 +19,7 @@
 @import "box";
 @import "color";
 @import "btn";
+@import "text";
 
 @import "header";
 
