--- a/app/assets/stylesheets/column.css
+++ b/app/assets/stylesheets/column.css
@@ -2,7 +2,9 @@
   border-right: 1px solid grey;
   grid-template-rows: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-items: center;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
