--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,10 +1,8 @@
 <div class="container">
 
-  <div class="mb-2">
-    <%= render "partial/error_messages", model: @song %>
-  </div>
+<%= render partial: "partial/error_messages", locals: { model: @song } %>
 
-  <h2 class="title-registration">Добавит песню: <%= "@#{current_user.name}" %></h2>
+  <h2 class="title-registration">Добавит песню</h2>
 
   <%= render "songs/form" %>
 
