--- a/app/assets/stylesheets/btn.css
+++ b/app/assets/stylesheets/btn.css
@@ -2,6 +2,9 @@
   min-width: 100px;
 }
 
+.btn {
+  min-width: 120px;
+}
 
 .size-btn-song {
   display: flex;
@@ -11,25 +14,6 @@
   height: 50px;
   min-width: 20px;
 }
-
-/* .size-btn-song {
-  display: grid;
-  align-items: center;
-  justify-items: center;
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
-  border-radius: 10px;
-  width: 100%;
-  height: 50px;
-  min-width: 20px;
-  cursor: pointer;
-  letter-spacing: 1px;
-  box-shadow: inset 0 0 0 0 #ffffff;
-  -webkit-transition: ease-out 0.4s;
-  -moz-transition: ease-out 0.4s;
-  transition: ease-out 0.4s;
-  text-decoration: none;
-} */
 
 .slide_right:hover {
   box-shadow: inset 100px 0 0 0 #282828;
