--- a/app/assets/stylesheets/text.css
+++ b/app/assets/stylesheets/text.css
@@ -5,9 +5,24 @@
   color: rgb(255, 255, 255);
 }
 
+
+.title-registration {
+  text-align: center;
+  background-size: black;
+  border-bottom: 1px solid black;
+  background-color: rgb(34, 125, 189);
+  color: rgb(255, 255, 255);
+  padding: 10px;
+}
+
+
 .text-white-back {
   color: rgb(254, 254, 254);
   text-decoration: none;
+}
+
+.text-white {
+  color: rgb(255, 255, 255);
 }
 
 .text-white-back:hover {
@@ -24,4 +39,14 @@
   color: rgb(0, 0, 0);
   padding: 10px;
   white-space: pre-line
+}
+
+.text-instructions {
+  font-size: 15px;
+  color:  rgb(0, 0, 0);
+  text-decoration: none;
+}
+
+.text-instructions:hover {
+  color: aqua;
 }
