--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,62 +1,69 @@
-
 <div class="container">
 
-<div class="mb-2">
-  <%= devise_error_messages! %>
-</div>
+  <div class="mb-2">
+    <%= devise_error_messages! %>
+  </div>
 
-    <h2 class="title-registration">Редактировать: <%= "@#{current_user.name}" %></h2>
+  <h2 class="title-registration">Редактировать: <%= "@#{current_user.name}" %></h2>
   
-
   <div class="registration-edit-form">
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'form-horizontal' }) do |f| %>
       <div class="form-group mb-3">
         <%= f.label :name, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <%= f.text_field :name, autofocus: true, class: 'form-edit'  %>
         </div>
       </div>
       <div class="form-group mb-3">
         <%= f.label :nickname, class: "col-sm-2" %>
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <%= f.text_field :nickname, autofocus: true, class: "form-edit" %>
         </div>
       </div>
       <div class="form-group mb-3">
         <%= f.label :email, class: 'col-sm-2 control-label'  %>
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <%= f.email_field :email, class: 'form-edit'  %>
         </div>
       </div>
       <div class="form-group mb-3">
         <%= f.label :password, class: 'col-sm-2 control-label'  %>
         <i class="text-muted">(оставьте поле пустым, если вы не хотите его изменять)</i>
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <%= f.password_field :password, autocomplete: "off", class: 'form-edit'  %>
         </div>
       </div>
       <div class="form-group mb-3">
         <%= f.label :password_confirmation, class: 'col-sm-2 control-label' %>
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-edit'  %>
         </div>
       </div>
       <div class="form-group mb-3">
         <%= f.label :current_password, class: 'col-sm-2 control-label' %>
         <i class="text-muted">(нам нужен ваш текущий пароль для подтверждения ваших изменений)</i>
-        <div class="col-sm-6">
+        <div class="col-sm-12">
           <%= f.password_field :current_password, autocomplete: "off", class: 'form-edit' %>
         </div>
       </div>
+      <div class="form-group mb-3">
+        <%= f.label :gender, class: 'col-sm-2 control-label'  %>
+        <div class="col-sm-12">
+          <%= f.select :gender, ["man", "woman"], autofocus: true, class: 'form-edit'  %>
+        </div>
+      </div>
+
       <div class="form-group mb-3 mt-2">
-        <div class="col-sm-offset-2 col-sm-6">
+        <div class="col-sm-offset-2 col-sm-12">
           <%= f.submit "Обновить", class: "btn btn-dark", data: { turbo: false } %>
+          
           <%= link_to "Удалить аккаунт", @user,
-          data: { turbo_method: "delete", turbo_confirm: "are_you_sure" },
+          data: { turbo_method: "delete", turbo_confirm: "are_you_sure?" },
                 class: 'btn btn-danger' %>
         </div>
       </div>
+
     <% end %>
   </div>
     <p class="title-registration"><%= link_to "Back", current_user, data: { turbo: false }, class: "link-white" %></p>
