--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,13 +1,13 @@
 <% if resource.errors.any? %>
   <div class="errors-form">
     <div id="error_explanation">
-      <h4>
+      <h4 class="title-errors">
         <%= I18n.t("errors.messages.not_saved",
                 count: resource.errors.count,
                 resource: resource.class.model_name.human.downcase)
       %>
       </h4>
-      <ul>
+      <ul class="text-error">
         <% resource.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
