--- a/app/views/devise/shared/_flash.html.erb
+++ b/app/views/devise/shared/_flash.html.erb
@@ -2,7 +2,7 @@
   <% flash.each do |key, value| %>
     <div class="<%= flash_class(key.to_sym) %> text-center" role="alert">
       <% unless value == true %>
-        <button type="button" class="btn-close" data-bs-dismiss="alert"
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert"
           aria-label="Close"></button>
           <%= value %>
       <% end %>
