--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,38 @@
-<h2>Change your password</h2>
+<div class="container">
+
+<div class="mb-2">
+  <%= devise_error_messages! %>
+</div>
+
+<h2 class="title-registration">Change your password</h2>
+
+<div class="registration-edit-form">
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
+  <div class="form-group mb-3">
+    <%= f.label :password, "New password" %>
+
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+
+    <%= f.password_field :password, autofocus: true, autocomplete: "new-password",  class: 'form-edit' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="form-group mb-3">
+    <%= f.label :password_confirmation, "Confirm new password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: 'form-edit' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
+  <div class="actions-field mt-3">
+      <%= f.submit "Change my password", class: "btn btn-dark", data: { turbo: false }  %>
+      <%= render "devise/shared/links" %>
   </div>
+  
 <% end %>
+</div>
 
-<%= render "devise/shared/links" %>
+</div>
