added avatar user and active storage avatar # the ability to upload photos to storage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,8 +40,9 @@
         </div>
       </header>
       
-
-      <%= render "devise/shared/flash" %>
+      <div class="me-3 ms-3">
+        <%= render "devise/shared/flash" %>
+      </div>
 
 
       <main class="main">
