--- a/app/assets/stylesheets/avatar.css
+++ b/app/assets/stylesheets/avatar.css
@@ -1,5 +1,5 @@
 .img-avatar {
-  width: 300px;
+  width: 100%;
   height: 300px;
-  border: 1px solid grey
+  border: 5px solid rgb(255, 255, 255)
 }
