--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -1,7 +1,7 @@
 .container-profile {
   margin: 20px;
   display: grid;
-  grid-template-columns: 300px 2fr;
+  grid-template-columns: 0.5fr 2fr;
   column-gap: 2em;
   align-items: none;
   justify-items: none;
