--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
 
-<%= render partial: "partial/error_messages", locals: { model: @song } %>
 
-  <h2 class="title-registration">Добавит песню</h2>
+<div class="errors_messages mb-1">
+  <%= render partial: "partial/error_messages", locals: { model: @song } %>
+</div>
 
-  <%= render "songs/form" %>
+<h2 class="title-registration">Добавит песню</h2>
+
+<%= render "songs/form" %>
 
 </div>
