--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
 
-<p class="title-author fs-4 text"><%= "#{@song.author}" %></p>
+<p class="title-author fs-4 text"><%= "#{@song.name_author}" %></p>
 
 <h2 class="title-registration"><%= "#{@song.title} - аккорды" %></h2>
   
