correct stylsheets error

--- a/app/assets/stylesheets/alert.css
+++ b/app/assets/stylesheets/alert.css
@@ -1,9 +1,9 @@
 .danger-alert {
-  background-color: #B9848C;
+  background-color: #fa3f5ba2;
   color: rgb(255, 255, 255);
 }
 
 .warning-alert {
-  background-color: #806491;
+  background-color: #25844a8f;
   color: rgb(255, 255, 255);
 }
