--- a/app/assets/stylesheets/errors.css
+++ b/app/assets/stylesheets/errors.css
@@ -1,8 +1,8 @@
 .errors-form {
   padding: 20px;
   border: 1px solid #63646454;
-  background-color: #835482;
-  color: #ffffff;
+  background-color: #B9848C;
+  color: #000000;
 }
 
 .errors_messages {
