--- a/app/views/partial/_error_messages.html.erb
+++ b/app/views/partial/_error_messages.html.erb
@@ -1,16 +1,16 @@
   <% errors = model.errors %>
+
+  <% if errors.any? %>
     <div class="errors-form">
-      <div id="error_explanation">
-        <h4>
-          <%= I18n.t("errors.messages.not_saved",
-                  count: errors.count,
-                  resource: model.class.model_name.human.downcase)
-        %>
-        </h4>
-        <ul>
+    <div id="error_explanation">
+    <h4 class="title-errors text-center">
+      <%= "errors.messages.not_saved" %>
+    </h4>
+        <ul class="text-error">
           <% errors.full_messages.each do |message| %>
             <li><%= message %></li>
           <% end %>
         </ul>
       </div>
     </div>
+  <% end %>
