--- a/app/assets/stylesheets/color.css
+++ b/app/assets/stylesheets/color.css
@@ -2,6 +2,10 @@
   background-color: gainsboro;
 }
 
+.bg-color-header {
+  background-color: #000000;
+}
+
 .link-white {
   color: rgb(255, 255, 255);
   text-decoration: none;
