--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -13,7 +13,6 @@
 @import "alert";
 @import "column";
 @import "registration";
-@import "errors";
 @import "profile";
 @import "footer";
 @import "avatar";
@@ -21,6 +20,9 @@
 @import "color";
 @import "btn";
 @import "text";
+@import "link";
+@import "list";
+@import "indent";
 
 @import "header";
 
