--- a/app/assets/stylesheets/avatar.css
+++ b/app/assets/stylesheets/avatar.css
@@ -1,5 +1,15 @@
 .img-avatar {
-  width: 100%;
-  height: 300px;
-  border: 5px solid rgb(255, 255, 255)
+  width: 100px;
+  height: 100px;
+  border: 5px solid rgb(255, 255, 255);
+  border-radius: 50%;
+}
+
+.img-avatar:hover {
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+}
+
+.logo-img {
+  width: 160px;
+  height: 70px;
 }
