--- a/app/assets/stylesheets/text.css
+++ b/app/assets/stylesheets/text.css
@@ -5,7 +5,6 @@
   color: rgb(255, 255, 255);
 }
 
-
 .title-registration {
   text-align: center;
   background-size: black;
@@ -15,6 +14,16 @@
   padding: 10px;
 }
 
+.title-abc {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  background-size: black;
+  border-bottom: 1px solid black;
+  background-color: rgb(34, 125, 189);
+  color: rgb(255, 255, 255);
+  padding: 10px;
+}
 
 .text-white-back {
   color: rgb(254, 254, 254);
@@ -50,4 +59,13 @@
 
 .text-instructions:hover {
   color: aqua;
+}
+
+.title-errors {
+  border-bottom: 1px solid white;
+}
+
+.text-error {
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
 }
